--- a/ws_soccers_odds_tst/ws_feeds_reader/ws_feeds_reader.csproj
+++ b/ws_soccers_odds_tst/ws_feeds_reader/ws_feeds_reader.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ws_soccers_odds_tst</RootNamespace>
-    <AssemblyName>ws_soccers_odds_tst</AssemblyName>
+    <RootNamespace>ws_feeds_reader</RootNamespace>
+    <AssemblyName>ws_feeds_reader</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -62,6 +62,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="models\soccer odds\Category.cs" />
+    <Compile Include="models\soccer odds\Match.cs" />
+    <Compile Include="models\soccer odds\Matches.cs" />
+    <Compile Include="models\soccer odds\Scores.cs" />
+    <Compile Include="models\soccer odds\Team.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="soccersodds.asmx.cs">
       <DependentUpon>soccersodds.asmx</DependentUpon>
