Soccer Odds Inserts Ready!

--- a/ws_soccers_odds_tst/ws_feeds_reader/Web.config
+++ b/ws_soccers_odds_tst/ws_feeds_reader/Web.config
@@ -1,13 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<!--
-  Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
 <configuration>
+  
+    <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=MAINSERVER;Initial Catalog=SportFeedsDB;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.0" />
-    </system.web>
 
+      <httpRuntime/>
+
+      <webServices>
+        <protocols>
+          <add name="HttpSoap12"/>
+          <add name="HttpSoap"/>
+          <add name="HttpGet"/>
+          <add name="HttpPost"/>
+        </protocols>
+      </webServices>
+    </system.web>
 </configuration>
